<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainRedBox"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sgu177.calculator.CalculatorActivity"
    android:orientation="vertical"
    android:background="@android:color/holo_red_dark">

    <LinearLayout
        android:id="@+id/bigGreenBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@android:color/holo_green_dark"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/backSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bigBlueBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/orangeBox1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_dark"
            android:orientation="vertical"
            android:layout_weight="5">
            <Button
                android:id="@+id/sinButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sineText"/>
            <Button
                android:id="@+id/cosButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/cosText"/>
            <Button
                android:id="@+id/tanButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/tanText"/>
            <Button
                android:id="@+id/pieButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/pieText"/>

            <Button
                android:id="@+id/exclamationButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/exclamationText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/orangeBox2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_light"
            android:orientation="vertical"
            android:layout_weight="5">
            <Button
                android:id="@+id/logTobBaseE"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/logtobasee"/>
            <Button
                android:id="@+id/loftobase10"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/logtobase10"/>
            <Button
                android:id="@+id/exponential"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/exponential" />

            <Button
                android:id="@+id/powerButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/power" />

            <Button
                android:id="@+id/modulo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/modulo" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/blackBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/black"
            android:layout_weight="21">
            <LinearLayout
                android:id="@+id/smallGreenBox1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7"/>
                <Button
                    android:id="@+id/eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8"/>
                <Button
                    android:id="@+id/nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9"/>

                <Button
                    android:id="@+id/divide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/" />

                <Button
                    android:id="@+id/leftbraces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="("/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/smallGreenBox2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

                <Button
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5" />

                <Button
                    android:id="@+id/six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6"/>
                <Button
                    android:id="@+id/multiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="X"/>
                <Button
                    android:id="@+id/rightbraces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=")"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/smallred"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@android:color/holo_red_light">
                <LinearLayout
                    android:id="@+id/smallblue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@android:color/holo_blue_bright">
                    <LinearLayout
                        android:id="@+id/smallyellow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@android:color/holo_orange_dark">
                        <Button
                            android:id="@+id/one"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"/>
                        <Button
                            android:id="@+id/two"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2"/>
                        <Button
                            android:id="@+id/three"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/smallyellow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@android:color/holo_orange_dark">
                        <Button
                            android:id="@+id/zero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"/>
                        <Button
                            android:id="@+id/substract"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-"/>
                        <Button
                            android:id="@+id/add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="+"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
